# hashaddressmapping

./: README.md
client/android/: build.gradle  settings.gradle
client/android/app/: build.gradle
client/android/app/libs/: crosspl-lib-v0.1.191.aar
client/android/app/src/main/: AndroidManifest.xml
client/android/app/src/main/res/layout/: activity_main.xml  content_main.xml
client/android/app/src/main/res/menu/: menu_main.xml
client/android/app/src/main/res/values/: strings.xml
client/android/gradle/: android.gradle  config.gradle  native.gradle  publish.gradle
client/android/gradle/wrapper/: gradle-wrapper.properties
server/: CMakeLists.txt  hashAddressMappingService  main.cpp
server/lib/include/: Connector.h  IMicroService.h  Json.hpp  PeerListener.h  PeerNode.h
server/lib/include/Elastos.SDK.Contact/: Config.hpp  Contact.hpp  ContactBridge.hpp  ContactChannel.hpp  ContactDataListener.hpp  ContactDebug.hpp  ContactFactory.hpp  ContactListener.hpp  ContactMessage.hpp  CrossBase.hpp  Elastos.SDK.Contact.hpp  ErrCode.hpp  FileManager.hpp  FriendInfo.hpp  FriendManager.hpp  HumanInfo.hpp  IdentifyCode.hpp  MessageChannelStrategy.hpp  MessageManager.hpp  SecurityManager.hpp  UserInfo.hpp  UserManager.hpp  experimental-span.hpp
server/lib/include/openssl/: opensslconf.h
server/source/: ErrCode.cpp  ErrCode.h  HashAddressMappingService.cpp  HashAddressMappingService.h
server/source/Command/: HashAddressMappingCmd.cpp  HashAddressMappingCmd.hpp
server/source/Common/: FileUtils.cpp  FileUtils.hpp
server/source/Tools/: Log.cpp  Log.hpp
(+4 files in other folders)
